--- a/apps/dashboard/src/app/upload/upload-files/upload-files.component.html
+++ b/apps/dashboard/src/app/upload/upload-files/upload-files.component.html
@@ -1,16 +1,15 @@
-<div class="upload-files">
-  <pa-button
-    class="close-button"
-    icon="cross"
-    aspect="basic"
-    (click)="cancel()">
-    {{ 'generic.close' | translate }}
-  </pa-button>
-
-  <div
-    mat-dialog-title
-    class="mb-28">
-    <h1>{{ (folderMode ? 'modal.upload_folder' : 'modal.upload.title') | translate }}</h1>
+<div class="upload-dialog upload-files">
+  <div mat-dialog-title>
+    <h1>
+      {{ (folderMode ? 'modal.upload_folder' : 'modal.upload.title') | translate }}
+      <pa-button
+        class="close-upload-button"
+        icon="cross"
+        aspect="basic"
+        (click)="cancel()">
+        {{ 'generic.close' | translate }}
+      </pa-button>
+    </h1>
   </div>
   <div mat-dialog-content>
     <div
