--- a/apps/dashboard/src/app/upload/upload-progress/upload-progress.component.html
+++ b/apps/dashboard/src/app/upload/upload-progress/upload-progress.component.html
@@ -1,14 +1,16 @@
-<div class="upload-progress">
-  <h1 class="mb-20">{{ 'upload.uploading_queue' | translate }}</h1>
-  <pa-button
-    class="close-button"
-    icon="cross"
-    aspect="basic"
-    (click)="close.emit()">
-    {{ 'generic.close' | translate }}
-  </pa-button>
+<div class="upload-dialog upload-progress">
+  <h1>
+    {{ 'upload.progress-dialog-title' | translate }}
+    <pa-button
+      class="close-upload-button"
+      icon="cross"
+      aspect="basic"
+      (click)="close.emit()">
+      {{ 'generic.close' | translate }}
+    </pa-button>
+  </h1>
 
-  <div class="warning">
+  <div class="dialog-description">
     <strong>{{ 'upload.takes_time' | translate }}</strong>
     <span>{{ 'upload.once_uploaded' | translate }}</span>
   </div>
@@ -16,29 +18,33 @@
     class="upload-list"
     *ngIf="(files | async)?.length > 0">
     <div
-      class="upload"
+      class="upload-row"
       *ngFor="let file of files | async">
       <div
-        class="file"
+        class="file body-s"
         [class.failed]="file.failed">
         <span class="file-name">{{ file.file.name }}</span>
-        <span class="file-size">- {{ file.file.size | size }}</span>
+        <span class="file-size body-xs">– {{ file.file.size | size }}</span>
       </div>
       <div class="status">
         <pa-icon
           *ngIf="file.uploaded"
-          name="check"
-          size="small"></pa-icon>
-        <pa-icon
-          *ngIf="file.conflicts"
-          paTooltip="upload.duplicated"
-          name="copy"
-          size="small"></pa-icon>
-        <pa-icon
-          *ngIf="file.failed && !file.conflicts"
-          paTooltip="upload.error"
-          name="cross"
-          size="small"></pa-icon>
+          name="check"></pa-icon>
+
+        <div
+          class="error body-xs"
+          *ngIf="file.conflicts">
+          <pa-icon name="warning"></pa-icon>
+          {{ 'upload.conflict' | translate }}
+        </div>
+
+        <div
+          class="error body-xs"
+          *ngIf="file.failed && !file.conflicts">
+          <pa-icon name="circle-cross"></pa-icon>
+          {{ 'upload.error' | translate }}
+        </div>
+
         <div
           class="progress-bar"
           *ngIf="file.progress !== 100">
@@ -49,10 +55,8 @@
   </div>
 
   <div class="footer">
-    <div>{{ 'modal.upload.queue_length' | translate }}: {{ (files | async)?.length }}</div>
-    <pa-button
-      kind="inverted"
-      (click)="close.emit()">
+    <div class="queue-length">{{ 'modal.upload.queue_length' | translate }}: {{ (files | async)?.length }}</div>
+    <pa-button (click)="close.emit()">
       {{ 'generic.close' | translate }}
     </pa-button>
   </div>
