--- a/apps/dashboard/src/app/upload/upload-text/upload-text.component.scss
+++ b/apps/dashboard/src/app/upload/upload-text/upload-text.component.scss
@@ -24,13 +24,13 @@ app-label-field {
   margin-bottom: rhythm(4);
 }
 
-.resource-list {
+.upload-list {
   max-height: rhythm(14);
   overflow-y: auto;
   margin-bottom: rhythm(4);
 }
 
-.resource {
+.upload {
   align-items: center;
   border-bottom: 1px solid $color-neutral-lighter;
   display: flex;
