--- a/apps/dashboard/src/app/upload/create-link/create-link.component.html
+++ b/apps/dashboard/src/app/upload/create-link/create-link.component.html
@@ -17,20 +17,63 @@
     (ngSubmit)="add()">
     <div class="new-link">
       <pa-input
-        *ngIf="!linkForm.value.multiple"
+        *ngIf="linkForm.value.type === 'one'"
         formControlName="link"
         [errorMessages]="validationMessages.link">
         {{ 'modal.create_link.input' | translate }}
       </pa-input>
       <pa-textarea
-        *ngIf="linkForm.value.multiple"
+        *ngIf="linkForm.value.type === 'multiple'"
         formControlName="links"
         rows="5"
         [errorMessages]="validationMessages.link">
         {{ 'modal.create_link.textarea' | translate }}
       </pa-textarea>
-      <pa-toggle formControlName="multiple">{{ 'modal.create_link.multiple' | translate }}</pa-toggle>
-      <app-label-field [(selection)]="selectedLabels"></app-label-field>
+      <div *ngIf="linkForm.value.type === 'csv'">
+        <p class="body-s">
+          <span [innerHtml]="'upload.csv_links_description' | translate"></span>
+          <br />
+          <span [innerHtml]="'upload.csv_labels' | translate"></span>
+        </p>
+        <ncom-hint label="CSV format details">
+          <ul>
+            <li *ngFor="let spec of specs">{{ spec }}</li>
+          </ul>
+        </ncom-hint>
+        <div class="select-csv">
+          <pa-button
+            kind="primary"
+            (click)="fileUpload.click()">
+            {{ 'upload.select_csv' | translate }}
+          </pa-button>
+          <input
+            (change)="readCSV($event)"
+            #fileUpload
+            type="file"
+            accept="text/csv"
+            hidden />
+        </div>
+        <div
+          *ngIf="csv.length > 0"
+          class="upload-list">
+          <div
+            *ngFor="let row of csv"
+            class="upload">
+            <span paEllipsisTooltip>{{ row[0] }}</span>
+            <span class="field">
+              {{ row[1].length ? ('upload.labels_number' | translate: { num: row[1].length }) : '' }}
+            </span>
+          </div>
+        </div>
+      </div>
+      <pa-radio-group formControlName="type">
+        <pa-radio value="one">{{ 'generic.link' | translate }}</pa-radio>
+        <pa-radio value="multiple">{{ 'modal.create_link.multiple' | translate }}</pa-radio>
+        <pa-radio value="csv">{{ 'modal.create_link.csv_file' | translate }}</pa-radio>
+      </pa-radio-group>
+      <app-label-field
+        *ngIf="linkForm.value.type !== 'csv'"
+        [(selection)]="selectedLabels"></app-label-field>
     </div>
 
     <nsi-spinner
@@ -50,7 +93,7 @@
       <pa-button
         type="submit"
         kind="primary"
-        [disabled]="!linkForm.valid || pending">
+        [disabled]="(linkForm.value.type === 'csv' ? csv.length === 0 : !linkForm.valid) || pending">
         {{ 'generic.add' | translate }}
       </pa-button>
     </div>
