--- a/apps/dashboard/src/app/resources/edit/classification/paragraph-classification/paragraph-classification.component.html
+++ b/apps/dashboard/src/app/resources/edit/classification/paragraph-classification/paragraph-classification.component.html
@@ -1,12 +1,25 @@
 <div class="classification-container">
   <div class="title-s">{{ 'resource.field-classification' | translate }}</div>
-  <app-label-dropdown
+  <div
     *ngIf="(hasLabels | async) === true; else noLabel"
-    single
-    [labelSets]="availableLabels | async"
-    (selectionChange)="updateSelection($event)">
-    {{ currentLabel ? currentLabel.labelset + ' – ' + currentLabel.label : ('generic.select_tags' | translate) }}
-  </app-label-dropdown>
+    class="classification-header">
+    <app-label-dropdown
+      single
+      [labelSets]="availableLabels | async"
+      (selectionChange)="updateSelection($event)">
+      {{ currentLabel ? currentLabel.labelset + ' – ' + currentLabel.label : ('generic.select_tags' | translate) }}
+    </app-label-dropdown>
+
+    <pa-input
+      [icon]="searchQuery ? 'cross' : 'search'"
+      [class.can-reset]="!!searchQuery"
+      [(ngModel)]="searchQuery"
+      (click)="onSearchInputClick($event)"
+      (keyup.enter)="triggerSearch()">
+      {{ 'resource.field-classification.search' | translate }}
+    </pa-input>
+  </div>
+
   <ng-template #noLabel>
     <p>
       {{ 'resource.classification.no-paragraph-labelset' | translate }}
@@ -21,27 +34,29 @@
   *ngIf="(hasLabels | async) === true"
   class="paragraphs-container"
   [class.disabled]="!currentLabel">
-  <div
-    class="paragraph-container"
-    *ngFor="let paragraph of paragraphs">
-    <p (click)="addLabelOnParagraph(paragraph)">{{ paragraph.text }}</p>
-    <div class="labels-container">
-      <pa-chip-closeable
-        *ngFor="let label of paragraph.generatedClassifications"
-        [backgroundColor]="(availableLabels | async)?.[label.labelset]?.color"
-        (closed)="cancelGeneratedLabel(paragraph, label)">
-        {{ label.label }}
-      </pa-chip-closeable>
-      <ng-container *ngFor="let label of paragraph.userClassifications">
+  <pa-infinite-scroll (reachAnchor)="loadMore()">
+    <div
+      class="paragraph-container"
+      *ngFor="let paragraph of paragraphs | async">
+      <p (click)="addLabelOnParagraph(paragraph)">{{ paragraph.text }}</p>
+      <div class="labels-container">
         <pa-chip-closeable
-          *ngIf="!label.cancelled_by_user"
+          *ngFor="let label of paragraph.generatedClassifications"
           [backgroundColor]="(availableLabels | async)?.[label.labelset]?.color"
-          (closed)="removeUserLabel(paragraph, label)">
+          (closed)="cancelGeneratedLabel(paragraph, label)">
           {{ label.label }}
         </pa-chip-closeable>
-      </ng-container>
+        <ng-container *ngFor="let label of paragraph.userClassifications">
+          <pa-chip-closeable
+            *ngIf="!label.cancelled_by_user"
+            [backgroundColor]="(availableLabels | async)?.[label.labelset]?.color"
+            (closed)="removeUserLabel(paragraph, label)">
+            {{ label.label }}
+          </pa-chip-closeable>
+        </ng-container>
+      </div>
     </div>
-  </div>
+  </pa-infinite-scroll>
 </div>
 
 <footer class="form-buttons">
