--- a/apps/dashboard/src/app/upload/upload-text/upload-text.component.scss
+++ b/apps/dashboard/src/app/upload/upload-text/upload-text.component.scss
@@ -2,51 +2,29 @@
 
 .upload-text {
   width: 50vw;
-
-  .upload-help {
-    margin: rhythm(3) 0;
-  }
-
-  ncom-hint ::ng-deep .hint {
-    margin-bottom: rhythm(3);
-  }
-  .csv-format {
-    margin-bottom: 0;
-    padding-left: rhythm(5);
-  }
-}
-
-.select-csv {
-  margin-bottom: rhythm(4);
 }
 
 app-label-field {
   margin-bottom: rhythm(4);
 }
 
-.upload-list {
+.uploads {
   max-height: rhythm(14);
   overflow-y: auto;
   margin-bottom: rhythm(4);
-}
 
-.upload {
-  align-items: center;
-  border-bottom: 1px solid $color-neutral-lighter;
-  display: flex;
-  gap: rhythm(1);
-  height: rhythm(4);
+  .upload {
+    align-items: center;
+    border-bottom: 1px solid $color-neutral-lighter;
+    display: flex;
+    gap: rhythm(1);
+    height: rhythm(4);
+    justify-content: space-between;
+    padding: 0 rhythm(1);
 
-  &:first-child {
-    border-top: 1px solid $color-neutral-lighter;
-  }
-
-  .title {
-    flex: 1 1 0;
-  }
-
-  .field {
-    width: rhythm(12);
+    &:first-child {
+      border-top: 1px solid $color-neutral-lighter;
+    }
   }
 }
 
