--- a/apps/dashboard/src/app/upload/upload-text/upload-text.component.html
+++ b/apps/dashboard/src/app/upload/upload-text/upload-text.component.html
@@ -10,49 +10,18 @@
     </pa-button>
   </h1>
 
-  <p class="upload-help body-s">
-    <span [innerHtml]="'upload.csv_description' | translate"></span>
-    <br />
-    <span [innerHtml]="'upload.csv_format' | translate"></span>
-    <br />
-    <span [innerHtml]="'upload.csv_labels' | translate"></span>
-  </p>
-
-  <ncom-hint label="CSV format details">
-    <ul class="csv-format">
-      <li *ngFor="let spec of specs">{{ spec }}</li>
-    </ul>
-  </ncom-hint>
-
-  <div class="select-csv">
-    <pa-button
-      kind="primary"
-      (click)="fileUpload.click()">
-      {{ 'upload.select_csv' | translate }}
-    </pa-button>
-    <input
-      (change)="readCSV($event)"
-      #fileUpload
-      type="file"
-      accept="text/csv"
-      hidden />
-  </div>
-
+  <app-csv-select
+    [help]="['upload.csv_description', 'upload.csv_format', 'upload.csv_labels']"
+    [fields]="4"
+    (select)="checkCsv($event)"></app-csv-select>
   <div
-    class="upload-list"
+    class="uploads"
     *ngIf="csv.length > 0">
     <div
       *ngFor="let row of csv"
       class="upload">
-      <span
-        class="title"
-        paEllipsisTooltip>
-        {{ row[0] }}
-      </span>
-      <code class="field">{{ row[2] }}</code>
-      <span class="field">
-        {{ row[3].length ? ('upload.labels_number' | translate: { num: row[3].length }) : '' }}
-      </span>
+      <span paEllipsisTooltip>{{ row.title }}</span>
+      <code>{{ row.format }}</code>
     </div>
   </div>
 
