--- a/apps/dashboard/src/app/upload/upload-text/upload-text.component.html
+++ b/apps/dashboard/src/app/upload/upload-text/upload-text.component.html
@@ -10,53 +10,18 @@
     </pa-button>
   </h1>
 
-  <p class="upload-help body-s">
-    <span [innerHtml]="'upload.csv_description' | translate"></span>
-    <br />
-    <span [innerHtml]="'upload.csv_format' | translate"></span>
-    <br />
-    <span [innerHtml]="'upload.csv_labels' | translate"></span>
-  </p>
-
-  <ncom-hint label="CSV format details">
-    <ul class="csv-format">
-      <li>Use commas as field delimiter</li>
-      <li>Fields containing commas or line breaks must be enclosed in double quotes</li>
-      <li>Double quotes appearing inside a quoted field must be prefixed with an additional double quote</li>
-      <li>Don't include a header line</li>
-    </ul>
-  </ncom-hint>
-
-  <div class="select-csv">
-    <pa-button
-      type="submit"
-      kind="primary"
-      (click)="fileUpload.click()">
-      {{ 'upload.select_csv' | translate }}
-    </pa-button>
-    <input
-      (change)="readCSV($event)"
-      #fileUpload
-      type="file"
-      accept="text/csv"
-      hidden />
-  </div>
-
+  <app-csv-select
+    [help]="['upload.csv_description', 'upload.csv_format', 'upload.csv_labels']"
+    [fields]="4"
+    (select)="checkCsv($event)"></app-csv-select>
   <div
-    class="resource-list"
-    *ngIf="resources.length > 0">
+    class="uploads"
+    *ngIf="csv.length > 0">
     <div
-      *ngFor="let resource of resources"
-      class="resource">
-      <span
-        class="title"
-        paEllipsisTooltip>
-        {{ resource[0] }}
-      </span>
-      <code class="field">{{ resource[2] }}</code>
-      <span class="field">
-        {{ resource[3].length ? ('upload.labels_number' | translate: { num: resource[3].length }) : '' }}
-      </span>
+      *ngFor="let row of csv"
+      class="upload">
+      <span paEllipsisTooltip>{{ row.title }}</span>
+      <code>{{ row.format }}</code>
     </div>
   </div>
 
@@ -74,7 +39,7 @@
       type="submit"
       kind="primary"
       (click)="upload()"
-      [disabled]="resources.length === 0 || isUploading">
+      [disabled]="csv.length === 0 || isUploading">
       {{ 'generic.add' | translate }}
     </pa-button>
   </div>
