--- a/apps/dashboard/src/app/resources/edit/classification/paragraph-classification/paragraph-classification.component.html
+++ b/apps/dashboard/src/app/resources/edit/classification/paragraph-classification/paragraph-classification.component.html
@@ -16,7 +16,7 @@
       [(ngModel)]="searchQuery"
       (click)="onSearchInputClick($event)"
       (keyup.enter)="triggerSearch()">
-      {{ 'resource.field-classification.search' | translate }}
+      {{ 'resource.field.search' | translate }}
     </pa-input>
   </div>
 
