--- a/apps/dashboard/src/app/resources/edit/edit-resource.component.html
+++ b/apps/dashboard/src/app/resources/edit/edit-resource.component.html
@@ -68,9 +68,7 @@
         </li>
       </ul>
     </nav>
-    <div
-      class="page-content"
-      [class.has-right-panel]="hasRightPanel">
+    <div class="page-content">
       <router-outlet></router-outlet>
     </div>
   </div>
