Improve layout of resource edition pages
  - make sure the scrollbar is on the right of the screen (and not super close to the content)
  - improve spacing above footer on field addition/edition pages

--- a/apps/dashboard/src/app/resources/edit/profile/link/link.component.html
+++ b/apps/dashboard/src/app/resources/edit/profile/link/link.component.html
@@ -1,37 +1,39 @@
-<form
-  [formGroup]="form"
-  (ngSubmit)="save()">
-  <label
-    class="title-xs"
-    for="link">
-    URL
-  </label>
-  <pa-input
-    id="link"
-    formControlName="link"
-    externalLabel></pa-input>
+<div class="main-container">
+  <form
+    [formGroup]="form"
+    (ngSubmit)="save()">
+    <label
+      class="title-xs"
+      for="link">
+      URL
+    </label>
+    <pa-input
+      id="link"
+      formControlName="link"
+      externalLabel></pa-input>
 
-  <footer class="form-field-buttons">
-    <div class="save-actions">
-      <pa-button
-        kind="primary"
-        [disabled]="!form.valid || form.pristine || isSaving"
-        (click)="save()">
-        {{ 'generic.save' | translate }}
-      </pa-button>
+    <footer class="form-field-buttons with-margin">
+      <div class="save-actions">
+        <pa-button
+          kind="primary"
+          [disabled]="!form.valid || form.pristine || isSaving"
+          (click)="save()">
+          {{ 'generic.save' | translate }}
+        </pa-button>
 
+        <pa-button
+          aspect="basic"
+          [disabled]="form.pristine || isSaving"
+          (click)="cancel()">
+          {{ 'generic.cancel' | translate }}
+        </pa-button>
+      </div>
       <pa-button
-        aspect="basic"
-        [disabled]="form.pristine || isSaving"
-        (click)="cancel()">
-        {{ 'generic.cancel' | translate }}
+        kind="destructive"
+        [disabled]="!isReady"
+        (click)="deleteField()">
+        {{ 'resource.field.delete' | translate }}
       </pa-button>
-    </div>
-    <pa-button
-      kind="destructive"
-      [disabled]="!isReady"
-      (click)="deleteField()">
-      {{ 'resource.field.delete' | translate }}
-    </pa-button>
-  </footer>
-</form>
+    </footer>
+  </form>
+</div>
