--- a/apps/dashboard/src/app/resources/edit/annotation/paragraph-annotation/paragraph-annotation.component.scss
+++ b/apps/dashboard/src/app/resources/edit/annotation/paragraph-annotation/paragraph-annotation.component.scss
@@ -20,56 +20,57 @@ $annotation-header-height: rhythm(9);
   width: 100%;
 }
 
-.paragraphs-container {
+.paragraphs-container,
+footer {
   max-width: rhythm(64);
+}
 
-  .paragraph-container {
-    position: relative;
+.paragraph-container {
+  position: relative;
 
-    p {
-      margin-bottom: 0;
+  p {
+    margin-bottom: 0;
 
-      ::ng-deep mark {
-        background: $color-neutral-lighter;
-        cursor: default;
-        padding: 0 rhythm(0.25);
-      }
-
-      &.family-selected ::ng-deep mark {
-        cursor: pointer;
-      }
+    ::ng-deep mark {
+      background: $color-neutral-lighter;
+      cursor: default;
+      padding: 0 rhythm(0.25);
     }
 
-    .annotation-buttons-container {
-      display: inline-flex;
+    &.family-selected ::ng-deep mark {
+      cursor: pointer;
+    }
+  }
+
+  .annotation-buttons-container {
+    display: inline-flex;
+    height: rhythm(2);
+    position: relative;
+
+    .annotation-button {
+      align-items: center;
+      border: none;
+      color: $color-light-stronger;
+      cursor: pointer;
+      display: flex;
+      justify-content: center;
       height: rhythm(2);
-      position: relative;
+      width: rhythm(2);
 
-      .annotation-button {
-        align-items: center;
-        border: none;
-        color: $color-light-stronger;
-        cursor: pointer;
+      pa-icon {
         display: flex;
-        justify-content: center;
-        height: rhythm(2);
-        width: rhythm(2);
+      }
 
-        pa-icon {
-          display: flex;
+      &.remove {
+        background: $color-dark-stronger;
+        &:hover {
+          background: lighten($color-dark-stronger, 25%);
         }
-
-        &.remove {
-          background: $color-dark-stronger;
-          &:hover {
-            background: lighten($color-dark-stronger, 25%);
-          }
-        }
-        &.confirm {
-          background: $color-primary-regular;
-          &:hover {
-            background: $color-primary-light;
-          }
+      }
+      &.confirm {
+        background: $color-primary-regular;
+        &:hover {
+          background: $color-primary-light;
         }
       }
     }
@@ -125,5 +126,10 @@ $annotation-header-height: rhythm(9);
 @media (min-width: $size-viewport-xlarge-min) {
   .entity-families-container {
     right: $padding-horizontal-header-xlarge;
+  }
+
+  .paragraphs-container,
+  footer {
+    max-width: rhythm(90);
   }
 }
