--- a/apps/dashboard/src/app/resources/edit/classification/paragraph-classification/paragraph-classification.component.html
+++ b/apps/dashboard/src/app/resources/edit/classification/paragraph-classification/paragraph-classification.component.html
@@ -1,76 +1,78 @@
-<div class="classification-container">
-  <div class="title-s">{{ 'resource.field-classification' | translate }}</div>
-  <div
-    *ngIf="(hasLabels | async) === true; else noLabel"
-    class="classification-header">
-    <app-label-dropdown
-      single
-      [labelSets]="availableLabels | async"
-      (selectionChange)="updateSelection($event)">
-      {{ currentLabel ? currentLabel.labelset + ' – ' + currentLabel.label : ('generic.select_tags' | translate) }}
-    </app-label-dropdown>
+<div class="main-container">
+  <div class="classification-container">
+    <div class="title-s">{{ 'resource.field-classification' | translate }}</div>
+    <div
+      *ngIf="(hasLabels | async) === true; else noLabel"
+      class="classification-header">
+      <app-label-dropdown
+        single
+        [labelSets]="availableLabels | async"
+        (selectionChange)="updateSelection($event)">
+        {{ currentLabel ? currentLabel.labelset + ' – ' + currentLabel.label : ('generic.select_tags' | translate) }}
+      </app-label-dropdown>
 
-    <pa-input
-      [icon]="searchQuery ? 'cross' : 'search'"
-      [class.can-reset]="!!searchQuery"
-      [(ngModel)]="searchQuery"
-      (click)="onSearchInputClick($event)"
-      (keyup.enter)="triggerSearch()">
-      {{ 'resource.field.search' | translate }}
-    </pa-input>
+      <pa-input
+        [icon]="searchQuery ? 'cross' : 'search'"
+        [class.can-reset]="!!searchQuery"
+        [(ngModel)]="searchQuery"
+        (click)="onSearchInputClick($event)"
+        (keyup.enter)="triggerSearch()">
+        {{ 'resource.field.search' | translate }}
+      </pa-input>
+    </div>
+
+    <ng-template #noLabel>
+      <p>
+        {{ 'resource.classification.no-paragraph-labelset' | translate }}
+        <a [routerLink]="(kbUrl | async) + '/label-sets'">
+          {{ 'resource.classification-page-link' | translate }}
+        </a>
+      </p>
+    </ng-template>
   </div>
 
-  <ng-template #noLabel>
-    <p>
-      {{ 'resource.classification.no-paragraph-labelset' | translate }}
-      <a [routerLink]="(kbUrl | async) + '/label-sets'">
-        {{ 'resource.classification-page-link' | translate }}
-      </a>
-    </p>
-  </ng-template>
-</div>
-
-<div
-  *ngIf="(hasLabels | async) === true"
-  class="paragraphs-container"
-  [class.disabled]="!currentLabel">
-  <pa-infinite-scroll (reachAnchor)="loadMore()">
-    <div
-      class="paragraph-container"
-      *ngFor="let paragraph of paragraphs | async">
-      <p (click)="addLabelOnParagraph(paragraph)">{{ paragraph.text }}</p>
-      <div class="labels-container">
-        <pa-chip-closeable
-          *ngFor="let label of paragraph.generatedClassifications"
-          [backgroundColor]="(availableLabels | async)?.[label.labelset]?.color"
-          (closed)="cancelGeneratedLabel(paragraph, label)">
-          {{ label.label }}
-        </pa-chip-closeable>
-        <ng-container *ngFor="let label of paragraph.userClassifications">
+  <div
+    *ngIf="(hasLabels | async) === true"
+    class="paragraphs-container"
+    [class.disabled]="!currentLabel">
+    <pa-infinite-scroll (reachAnchor)="loadMore()">
+      <div
+        class="paragraph-container"
+        *ngFor="let paragraph of paragraphs | async">
+        <p (click)="addLabelOnParagraph(paragraph)">{{ paragraph.text }}</p>
+        <div class="labels-container">
           <pa-chip-closeable
-            *ngIf="!label.cancelled_by_user"
+            *ngFor="let label of paragraph.generatedClassifications"
             [backgroundColor]="(availableLabels | async)?.[label.labelset]?.color"
-            (closed)="removeUserLabel(paragraph, label)">
+            (closed)="cancelGeneratedLabel(paragraph, label)">
             {{ label.label }}
           </pa-chip-closeable>
-        </ng-container>
+          <ng-container *ngFor="let label of paragraph.userClassifications">
+            <pa-chip-closeable
+              *ngIf="!label.cancelled_by_user"
+              [backgroundColor]="(availableLabels | async)?.[label.labelset]?.color"
+              (closed)="removeUserLabel(paragraph, label)">
+              {{ label.label }}
+            </pa-chip-closeable>
+          </ng-container>
+        </div>
       </div>
-    </div>
-  </pa-infinite-scroll>
+    </pa-infinite-scroll>
+  </div>
+
+  <footer class="form-buttons">
+    <pa-button
+      kind="primary"
+      [disabled]="!isModified || isSaving"
+      (click)="save()">
+      {{ 'generic.save' | translate }}
+    </pa-button>
+
+    <pa-button
+      aspect="basic"
+      [disabled]="!isModified || isSaving"
+      (click)="cancel()">
+      {{ 'generic.cancel' | translate }}
+    </pa-button>
+  </footer>
 </div>
-
-<footer class="form-buttons">
-  <pa-button
-    kind="primary"
-    [disabled]="!isModified || isSaving"
-    (click)="save()">
-    {{ 'generic.save' | translate }}
-  </pa-button>
-
-  <pa-button
-    aspect="basic"
-    [disabled]="!isModified || isSaving"
-    (click)="cancel()">
-    {{ 'generic.cancel' | translate }}
-  </pa-button>
-</footer>
