--- a/apps/dashboard/src/app/resources/edit/profile/file/file.component.html
+++ b/apps/dashboard/src/app/resources/edit/profile/file/file.component.html
@@ -1,35 +1,37 @@
-<ng-container *ngIf="(field | async)?.value">
-  <p [innerHTML]="'resource.field-file.dropzone-label' | translate: { filename: (filename | async) }"></p>
-  <app-dropzone
-    [isUploading]="isUploading"
-    (file)="newFile = $event"></app-dropzone>
-</ng-container>
+<div class="main-container">
+  <ng-container *ngIf="(field | async)?.value">
+    <p [innerHTML]="'resource.field-file.dropzone-label' | translate: { filename: (filename | async) }"></p>
+    <app-dropzone
+      [isUploading]="isUploading"
+      (file)="newFile = $event"></app-dropzone>
+  </ng-container>
 
-<p *ngIf="newFile">
-  <strong>{{ 'resource.field-file.new-file' | translate }}</strong>
-  {{ newFile.name }}
-</p>
+  <p *ngIf="newFile">
+    <strong>{{ 'resource.field-file.new-file' | translate }}</strong>
+    {{ newFile.name }}
+  </p>
 
-<footer class="form-field-buttons">
-  <div class="save-actions">
+  <footer class="form-field-buttons with-margin">
+    <div class="save-actions">
+      <pa-button
+        kind="primary"
+        [disabled]="!newFile || isUploading"
+        (click)="save()">
+        {{ 'generic.save' | translate }}
+      </pa-button>
+
+      <pa-button
+        aspect="basic"
+        [disabled]="!newFile || isUploading"
+        (click)="cancel()">
+        {{ 'generic.cancel' | translate }}
+      </pa-button>
+    </div>
     <pa-button
-      kind="primary"
-      [disabled]="!newFile || isUploading"
-      (click)="save()">
-      {{ 'generic.save' | translate }}
+      kind="destructive"
+      [disabled]="!isReady || isUploading"
+      (click)="deleteField()">
+      {{ 'resource.field.delete' | translate }}
     </pa-button>
-
-    <pa-button
-      aspect="basic"
-      [disabled]="!newFile || isUploading"
-      (click)="cancel()">
-      {{ 'generic.cancel' | translate }}
-    </pa-button>
-  </div>
-  <pa-button
-    kind="destructive"
-    [disabled]="!isReady || isUploading"
-    (click)="deleteField()">
-    {{ 'resource.field.delete' | translate }}
-  </pa-button>
-</footer>
+  </footer>
+</div>
