--- a/apps/dashboard/src/app/resources/edit/profile/text/text.component.scss
+++ b/apps/dashboard/src/app/resources/edit/profile/text/text.component.scss
@@ -4,7 +4,7 @@
 :host {
   pa-textarea ::ng-deep textarea {
     height: calc(
-      100vh - var(--app-topbar-height) - #{$height-header} - #{$padding-top-page-container} - #{$footer-height}
+      100vh - var(--app-topbar-height) - #{$height-header} - #{$padding-top-page-container} - #{$footer-height} - #{$footer-margin}
     );
     min-height: rhythm(10);
   }
